--- a/impressum.html
+++ b/impressum.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ßßßßßßßßßßßßßßßßßßßß<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -94,9 +94,8 @@
   E-Mail: <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a></p>
 
   <h3>3. Hosting & Datenschutz</h3>
-  <p>Diese Website wird über einen externen Hosting-Anbieter betrieben. Beim Aufruf der Seiten werden technisch notwendige Verbindungsdaten durch den Hostingdienst verarbeitet.</br>
-  Diese Daten sind für den Websitebetreiber nicht einsehbar und werden von ihm nicht ausgewertet.</br></p>
-  <p>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Eine personenbezogene Auswertung findet nicht statt.<br>
+  <p>Diese Website wird über einen externen Hosting-Anbieter betrieben. Beim Aufruf der Seiten werden technisch notwendige Verbindungsdaten durch den Hostingdienst verarbeitet.</p>
+  <p>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Sie sind für den Websitebetreiber nicht einsehbar und eine personenbezogene Auswertung findet nicht statt.<br>
   Diese Website selbst speichert keinerlei personenbezogenen Daten und verwendet keine Cookies oder Trackingdienste.</p>
 
   <h3>4. Kontaktaufnahme</h3>
@@ -105,12 +104,12 @@
   <h3>5. Rechte betroffener Personen</h3>
   <p>Sie haben das Recht auf:</p>
   <ul>
-    - Auskunft über die gespeicherten Daten<br>
-    - Berichtigung unrichtiger Daten<br>
-    - Löschung, sofern keine gesetzlichen Aufbewahrungspflichten bestehen<br>
-    - Einschränkung der Verarbeitung<br>
-    - Widerspruch gegen die Verarbeitung<br>
-    - Datenübertragbarkeit<br>
+	<li>- Auskunft über die gespeicherten Daten</li>
+	<li>- Berichtigung unrichtiger Daten</li>
+	<li>- Löschung, sofern keine gesetzlichen Aufbewahrungspflichten bestehen</li>
+	<li>- Einschränkung der Verarbeitung</li>
+	<li>- Widerspruch gegen die Verarbeitung</li>
+	<li>- Datenübertragbarkeit</li>
   </ul>
   <p>Zur Ausübung dieser Rechte genügt eine formlose Mitteilung per E-Mail an: <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a></p>
 
