--- a/impressum.html
+++ b/impressum.html
@@ -95,8 +95,8 @@
 
   <h3>3. Hosting & Datenschutz</h3>
   <p>Diese Website wird über einen externen Hosting-Anbieter betrieben. Beim Aufruf der Seiten werden technisch notwendige Verbindungsdaten durch den Hostingdienst verarbeitet.</p>
-  <p>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Sie sind für den Websitebetreiber nicht einsehbar und eine personenbezogene Auswertung findet nicht statt.<br>
-  Diese Website selbst speichert keinerlei personenbezogenen Daten und verwendet keine Cookies oder Trackingdienste.</p>
+  <p>Diese Daten dienen ausschließlich der technischen Stabilität und Optimierung der Website. Sie sind für den Websitebetreiber nicht einsehbar; eine personenbezogene Auswertung findet nicht statt.<br>
+  Diese Website selbst speichert keinerlei personenbezogene Daten und verwendet keine Cookies oder Trackingdienste.</p>
 
   <h3>4. Kontaktaufnahme</h3>
   <p>Wenn Sie mich per E-Mail kontaktieren, werden Ihre Angaben zur Bearbeitung der Anfrage verarbeitet. Die Daten werden nicht an Dritte weitergegeben und nur so lange gespeichert, wie dies zur Bearbeitung erforderlich ist.</p>
