--- a/kontakt.html
+++ b/kontakt.html
@@ -71,7 +71,7 @@
       <label for="nachricht">Ihre Nachricht:</label><br />
       <textarea id="nachricht" name="nachricht" rows="10" required></textarea><br/><br/>
 
-      <label for="contact">Ihr Erreichbarkeit:</label><br />
+      <label for="contact">Ihre Erreichbarkeit:</label><br />
       <input type="text" id="contact" name="contact" /><br /><br />
 
       <button type="submit">Anfrage senden</button>
@@ -91,6 +91,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
