--- a/impressum.html
+++ b/impressum.html
@@ -103,13 +103,13 @@
 
   <h3>5. Rechte betroffener Personen</h3>
   <p>Sie haben das Recht auf:</p>
-  <ul>
-	- Auskunft über die gespeicherten Daten<br>
-	- Berichtigung unrichtiger Daten<br>
-	- Löschung, sofern keine gesetzlichen Aufbewahrungspflichten bestehen<br>
-	- Einschränkung der Verarbeitung<br>
-	- Widerspruch gegen die Verarbeitung<br>
-	- Datenübertragbarkeit<br>
+  <ul class="zentriert">
+	<li>Auskunft über die gespeicherten Daten</li>
+	<li>Berichtigung unrichtiger Daten</li>
+	<li>Löschung, sofern keine gesetzlichen Aufbewahrungspflichten bestehen</li>
+	<li>Einschränkung der Verarbeitung</li>
+	<li>Widerspruch gegen die Verarbeitung</li>
+	<li>Datenübertragbarkeit</li>
   </ul>
   <p>Zur Ausübung dieser Rechte genügt eine formlose Mitteilung per E-Mail an: <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a></p>
 
