--- a/testbereich/index.html
+++ b/testbereich/index.html
@@ -16,6 +16,7 @@
     <h1>AU-Bescheinigung OCR</h1>
 
     <input type="file" id="imageInput" accept="image/*">
+    <progress id="ocrProgress" value="0" max="1" style="width:100%; display:none;"></progress>
     <button onclick="runOCR()">OCR starten</button>
 
     <div class="form-section">
