--- a/testbereich/index.html
+++ b/testbereich/index.html
@@ -16,7 +16,7 @@
     <h1>AU-Bescheinigung OCR</h1>
 
     <input type="file" id="imageInput" accept="image/*">
-    <progress id="ocrProgress" value="0" max="1" style="width:100%; display:none;"></progress>
+    <progress id="ocrProgress" value="0" max="1" style="display:none; height: 20px; max-width: 500px; width: 100%;"></progress>
     <button onclick="runOCR()">OCR starten</button>
 
     <div class="form-section">
