--- a/testbereich/index.html
+++ b/testbereich/index.html
@@ -16,8 +16,8 @@
     <h1>AU-Bescheinigung OCR</h1>
 
     <input type="file" id="imageInput" accept="image/*">
+    <progress id="ocrProgress" value="0" max="1" style="display:none; height: 20px; max-width: 500px; width: 100%;"></progress>
     <img id="imgPreview" style="max-width: 100%; margin-top: 10px; display: none;" />
-
     <button onclick="runOCR()">OCR starten</button>
 
     <div class="form-section">
