--- a/testbereich/index.html
+++ b/testbereich/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <h1>AU-Bescheinigung OCR</h1>
+    <p id="versionInfo">Version: HTML v1.3 • JS v…</p>
+
 
     <input type="file" id="imageInput" accept="image/*">
     <progress id="ocrProgress" value="0" max="1" style="display:none; height: 20px; max-width: 500px; width: 100%;"></progress>
