--- a/testbereich/index.html
+++ b/testbereich/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>AU-Bescheinigung OCR</h1>
-    <p id="versionInfo">Version: HTML v1.6 • JS v…</p>
+    <p id="versionInfo">Version: HTML v1.5 • JS v…</p>
 
 
     <input type="file" id="imageInput" accept="image/*">
@@ -42,5 +42,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
     <script src="script.js"></script>
+<script src="script.js?v=1.6" defer></script>
 </body>
 </html>
