bewertungen.html aktualisieren

--- a/bewertungen.html
+++ b/bewertungen.html
@@ -107,7 +107,7 @@
     <span class="bewertung-name">Buchclub "Stabile Seitenlage"</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text"><b>Wir hatten eine Idee - und Philipp hat sie für uns möglich gemacht.</b><br/>
+  <p class="bewertung-text">Wir hatten eine Idee - und Philipp hat sie für uns möglich gemacht.</b><br/>
 	  Die Betreuung unserer Bücherdatenbank war hier in den besten Händen und wir konnten uns endlich auf das konzentrieren, was zählt: Das Lesen 👍<br/>
 	  Engagiert, verlässlich, freundlich und immer mit einem offenen Ohr für individuelle Wünsche.<br/>
 	  Vielen Dank dafür!</p>
@@ -120,7 +120,7 @@
     <span class="bewertung-name">Whiskyfreunde Neukirchen</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text"><b>Als Whiskyfreunde haben wir immer nach einer Möglichkeit gesucht unsere Schätze zu verwalten. Aber es gab einfach keine App oder Website, die das konnte. Unsere eigene Kreation, eine geteilte Excel Liste in der iCloud, war irgendwann nur noch eine völlige Krücke und nicht mehr zu gebrauchen. Philipp hat uns in Kleinarbeit eine eigene Webapp genau nach unseren Vorstellungen gebaut. Whiskyprofile, Bewertungssystem, Tastingnotizen, Bestandsverwaltung… Unfassbar genial. Wir sind begeistert vom Enthusiasmus seiner Umsetzung. Es war eine super Zusammenarbeit. Vielen, vielen Dank und alles Gute! Beste Grüße aus dem Erzgebirge :-)</p>
+  <p class="bewertung-text">Als Whiskyfreunde habe.n wir immer nach einer Möglichkeit gesucht unsere Schätze zu verwalten. Aber es gab einfach keine App oder Website, die das konnte. Unsere eigene Kreation, eine geteilte Excel Liste in der iCloud, war irgendwann nur noch eine völlige Krücke und nicht mehr zu gebrauchen. Philipp hat uns in Kleinarbeit eine eigene Webapp genau nach unseren Vorstellungen gebaut. Whiskyprofile, Bewertungssystem, Tastingnotizen, Bestandsverwaltung… Unfassbar genial. Wir sind begeistert vom Enthusiasmus seiner Umsetzung. Es war eine super Zusammenarbeit. Vielen, vielen Dank und alles Gute! Beste Grüße aus dem Erzgebirge :-)</p>
   <div class="bewertung-footer">eingegangen am 02.11.2025</div>
 </div>
 
