--- a/bewertungen.html
+++ b/bewertungen.html
@@ -120,7 +120,7 @@
     <span class="bewertung-name">Whiskyfreunde Neukirchen</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text">Als Whiskyfreunde habe.n wir immer nach einer Möglichkeit gesucht unsere Schätze zu verwalten. Aber es gab einfach keine App oder Website, die das konnte. Unsere eigene Kreation, eine geteilte Excel Liste in der iCloud, war irgendwann nur noch eine völlige Krücke und nicht mehr zu gebrauchen. Philipp hat uns in Kleinarbeit eine eigene Webapp genau nach unseren Vorstellungen gebaut. Whiskyprofile, Bewertungssystem, Tastingnotizen, Bestandsverwaltung… Unfassbar genial. Wir sind begeistert vom Enthusiasmus seiner Umsetzung. Es war eine super Zusammenarbeit. Vielen, vielen Dank und alles Gute! Beste Grüße aus dem Erzgebirge :-)</p>
+  <p class="bewertung-text">Als Whiskyfreunde haben wir immer nach einer Möglichkeit gesucht unsere Schätze zu verwalten. Aber es gab einfach keine App oder Website, die das konnte. Unsere eigene Kreation, eine geteilte Excel Liste in der iCloud, war irgendwann nur noch eine völlige Krücke und nicht mehr zu gebrauchen. Philipp hat uns in Kleinarbeit eine eigene Webapp genau nach unseren Vorstellungen gebaut. Whiskyprofile, Bewertungssystem, Tastingnotizen, Bestandsverwaltung… Unfassbar genial. Wir sind begeistert vom Enthusiasmus seiner Umsetzung. Es war eine super Zusammenarbeit. Vielen, vielen Dank und alles Gute! Beste Grüße aus dem Erzgebirge :-)</p>
   <div class="bewertung-footer">eingegangen am 02.11.2025</div>
 </div>
 
