bewertungen.html aktualisieren

--- a/bewertungen.html
+++ b/bewertungen.html
@@ -118,7 +118,7 @@
 
 <div class="bewertung">
   <div class="bewertung-header">
-    <span class="bewertung-name">Obstbäume Kayna"</span>
+    <span class="bewertung-name">Obstbäume Kayna</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
   <p class="bewertung-text">Ich brauchte Hilfe beim Bäume verschneiden, weil ich es selbst nicht mehr so gut kann auf der Leiter. Herr Hochstein wurde mir empfohlen. Die andere Firma hatte keine Kapazitäten. Er packt engagiert an, ist sehr freundlich und vor allem zuverlässig, was leider selten geworden ist. War sehr zufrieden und werde hier ganz sicher wieder anfragen. R.K.</p>
